--- a/main.tex
+++ b/main.tex
@@ -98,22 +98,15 @@ class RacingAgent:
 %   Reward Scheme   %
 %%%%%%%%%%%%%%%%%
 
-
- 
-
-
-The same as observation space you need to specify your action space, what are the actions in your problem. What is the size of the action space? Is it continuous or discrete? For example, the action space in mountain car problem is discrete and given as [Left, Neutral, Right]. 
-
 \section{Reward Scheme}
 
-The reward is -0.1 every frame and +1000/t for every track tile visited, where $T$ is the total number of tiles visited in the track. For example, if you have finished in 503 frames, your reward would br 1000 - 0.1*503 =] 8 points. The episode finishes once all of the track tiles are visited. The car can also go outside of the playfield - that is, far off the track, in which case it will receive -100 reward and die.
+The reward is -0.1 every frame and +1000/$t$ for every track tile visited, where $t$ is the total number of tiles visited in the track. For example, if you have finished in 503 frames, your reward would be 1000 - 0.1*503 = 949.7. The episode finishes once all of the track tiles are visited. The car can also travel outside of the playfield — that is, far off the track, in which case it will receive -100 reward and die.
 
 %%%%%%%%%%%%%%%%%
 %   Methdology and Algorithm Description  %
 %%%%%%%%%%%%%%%%%
 
 \section{Methodology and Algorithm Description} 
-
 
 \subsection{Description of the Algorithm}
 
@@ -124,7 +117,6 @@ The reward is -0.1 every frame and +1000/t for every track tile visited, where $
 
 
 \subsection{Anshul's Methdologies / Experiments}
-
 
 \subsection{Max's Methdologies / Experiments}
 
@@ -158,8 +150,6 @@ If you are adding figures or table to visualize your results make sure to add in
 
 In this section you can provide some information about what were the challenges you had during the implementation and how you overcame them. Finally, you can discuss what future work and improvement you may consider later.
 Here you can also add each group member contribution in this project. 
-
-
 
 \bibliographystyle{ieeetr}
 \bibliography{references}
